--- a/src/input.css
+++ b/src/input.css
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');
 
-body {
-    font-family: 'Inter,sans-serif';
+
+body, * {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif,sans-serif;
 }
 
 .navbar-fixed {
